[project]
name = "braxmultiwalker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "brax>=0.13.0",
    "jax>=0.8.0",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "warp-lang>=1.10.0",
]

[tool.uv.sources]
brax = { git = "https://github.com/google/brax.git", rev = "main" }
